2005-01-01  Joel Brobecker  <brobecker@gnat.com>

        * hppa-tdep.c (prologue_inst_adjust_sp): Fix small confusion
        in register number for addil instruction.

For older changes see ChangeLog-2004.

Local Variables:
mode: change-log
left-margin: 8
fill-column: 74
version-control: never
End: